--- a/ProductManagement/src/main/resources/application.properties
+++ b/ProductManagement/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=ProductManagement
+# H2 Database
+spring.datasource.url=jdbc:h2:mem:6fc12de9-18c1-4655-b427-e39007cffe89
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=shad
+spring.h2.console.enabled=true
+server.port = 8080
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
